<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarPersona">

    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="28dp"
        android:duplicateParentState="false"
        android:editable="true"
        android:hint="@string/labelNombre"
        app:layout_constraintBottom_toTopOf="@+id/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regresar" />

    <EditText
        android:id="@+id/numero"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="27dp"
        android:duplicateParentState="false"
        android:editable="true"
        android:hint="@string/labelNumero"
        app:layout_constraintBottom_toTopOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="29dp"
        android:duplicateParentState="false"
        android:editable="true"
        android:hint="@string/labelCorreo"
        app:layout_constraintBottom_toTopOf="@+id/direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero" />

    <EditText
        android:id="@+id/direccion"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="106dp"
        android:duplicateParentState="false"
        android:editable="true"
        android:hint="@string/labelDireccion"
        app:layout_constraintBottom_toTopOf="@+id/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="31dp"
        android:duplicateParentState="false"
        android:editable="true"
        android:hint="@string/labelApellido"
        app:layout_constraintBottom_toTopOf="@+id/numero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="69dp"
        android:text="@string/labelGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>